--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,12 @@
       "src": "app.js",
       "use": "@now/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.js"
+    }
   ]
 }
+
